<resources>
    <string name="app_name">ebusiness</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">英文</string>
    <string name="mine">我的</string>
    <string name="login_register">请登录/注册</string>
    <string name="collectibles">收藏的商品</string>
    <string name="collection_store">收藏的店铺</string>
    <string name="my_orders">我的订单</string>
    <string name="message_list">消息列表</string>
    <string name="modify_password">修改密码</string>
    <string name="shipping_address">收货地址</string>
    <string name="about_company">关于公司</string>
    <string name="FAQ">常见问题</string>
    <string name="feedback">意见反馈</string>
    <string name="language_switch">语言切换</string>
    <string name="new_guidelines">新手指引</string>
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="cart">购物车</string>
    <string name="add_shipping_address">添加新地址</string>
    <string name="modify_shipping_address">编辑收货地址</string>
    <string name="consignee">收货人</string>
    <string name="phone_no">手机号</string>
    <string name="region">所在地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="set_as_default_address">设为默认地址</string>
    <string name="system_message">系统消息</string>
    <string name="notification">通知</string>
    <string name="manage">管理</string>
    <string name="my_favorite">我的收藏</string>
    <string name="store">店铺</string>
    <string name="merchandise">商品</string>
    <string name="empty_pwd">请输入密码</string>
    <string name="empty_email">请输入邮箱</string>
    <string name="error_email">邮箱不合法</string>
    <string name="forget_pwd">找回密码</string>
    <string name="register">注册</string>
    <string name="jump">跳过</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="pwd_differ">两次密码不一致</string>
    <string name="text_default">默认</string>
</resources>
