<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/y20"
            android:text="@string/mine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            style="@style/viewLine"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <RelativeLayout
            android:id="@+id/rl_not_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:paddingBottom="@dimen/y30"
            android:paddingTop="@dimen/y30"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="@dimen/x150"
                android:layout_height="@dimen/y150"
                android:layout_marginStart="@dimen/x50"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_head"
                android:text="@string/login_register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_42" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:paddingBottom="@dimen/y30"
            android:paddingTop="@dimen/y30"
            app:layout_constraintTop_toBottomOf="@id/rl_not_login">

            <ImageView
                android:id="@+id/iv_head_portrait"
                android:layout_width="@dimen/x150"
                android:layout_height="@dimen/y150"
                android:layout_marginStart="@dimen/x50"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_head_portrait"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_42" />

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <android.support.constraint.Group
            android:id="@+id/cg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="rl_login,iv_head_portrait,iv_arrow,tv_name,rl_collectibles,rl_collection_store,rl_orders,tv_modify_password,tv_shipping_address,tv_message" />

        <View style="@style/viewLine" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_left_right"
            android:layout_marginStart="@dimen/padding_left_right"
            android:layout_marginTop="@dimen/y250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/rl_collectibles"
                    style="@style/mine_linear_layout">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        style="@style/mine_linear_layout_text_view"
                        android:text="@string/collectibles" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_collection_store"
                    style="@style/mine_linear_layout">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        style="@style/mine_linear_layout_text_view"
                        android:text="@string/collection_store" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_orders"
                    style="@style/mine_linear_layout">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        style="@style/mine_linear_layout_text_view"
                        android:text="@string/my_orders" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_modify_password"
            style="@style/mine_text_view"
            android:text="@string/modify_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <View
            style="@style/viewLineMarginLeftRight"
            app:layout_constraintTop_toBottomOf="@+id/tv_modify_password" />

        <TextView
            android:id="@+id/tv_shipping_address"
            style="@style/mine_text_view"
            android:text="@string/shipping_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_modify_password" />

        <View
            style="@style/viewLineMarginLeftRight"
            app:layout_constraintTop_toBottomOf="@+id/tv_shipping_address" />

        <TextView
            android:id="@+id/tv_message"
            style="@style/mine_text_view"
            android:text="我的消息"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_shipping_address" />

        <View
            style="@style/viewLineMarginLeftRight"
            app:layout_constraintTop_toBottomOf="@+id/tv_message" />

        <TextView
            android:id="@+id/tv_about_company"
            style="@style/mine_text_view"
            android:text="@string/about_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_message" />

        <View
            style="@style/viewLineMarginLeftRight"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_company" />

        <TextView
            android:id="@+id/tv_FAQ"
            style="@style/mine_text_view"
            android:text="@string/FAQ"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_company" />

        <View
            style="@style/viewLineMarginLeftRight"
            app:layout_constraintTop_toBottomOf="@+id/tv_FAQ" />

        <TextView
            android:id="@+id/tv_feedback"
            style="@style/mine_text_view"
            android:text="@string/feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_FAQ" />

        <View
            style="@style/viewLineMarginLeftRight"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback" />

        <TextView
            style="@style/mine_text_view"
            android:drawableEnd="@null"
            android:text="@string/language_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback" />

        <TextView
            android:id="@+id/tv_language"
            style="@style/mine_text_view"
            android:drawableEnd="@null"
            android:gravity="center_vertical|end"
            android:text="@string/language_chinese"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_feedback" />

        <View
            style="@style/viewLineMarginLeftRight"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />

        <TextView
            android:id="@+id/tv_new_guidelines"
            style="@style/mine_text_view"
            android:text="@string/new_guidelines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>