<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_consignee_name"
        style="@style/edit_text"
        android:hint="@string/consignee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/viewLineMarginLeftRight"
        app:layout_constraintTop_toBottomOf="@+id/et_consignee_name" />

    <TextView
        android:id="@+id/tv_phone_area"
        android:layout_width="@dimen/x150"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/padding_left_right"
        android:drawableEnd="@drawable/down"
        android:gravity="center_vertical"
        android:text="+968"
        android:textColor="@color/black_3"
        android:textSize="@dimen/text_size_32"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phone" />

    <EditText
        android:id="@+id/et_phone"
        style="@style/modify_password_edit_text"
        android:layout_marginStart="0dp"
        android:hint="请输入手机号"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_area"
        app:layout_constraintTop_toBottomOf="@+id/et_consignee_name" />

    <View
        style="@style/viewLineMarginLeftRight"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <TextView
        android:id="@+id/tv_region"
        style="@style/mine_text_view"
        android:gravity="center_vertical"
        android:text="@string/region"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <View
        style="@style/viewLineMarginLeftRight"
        app:layout_constraintTop_toBottomOf="@+id/tv_region" />

    <EditText
        android:id="@+id/et_address_detail"
        style="@style/edit_text"
        android:gravity="left"
        android:hint="@string/detailed_address"
        android:lineSpacingExtra="@dimen/y5"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_region" />

    <View
        style="@style/viewLineMarginLeftRight"
        app:layout_constraintTop_toBottomOf="@+id/et_address_detail" />

    <RelativeLayout
        android:id="@+id/rl_default_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_address_detail">

        <TextView
            style="@style/base_text"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_as_default_address"
            android:textColor="@color/black_3"
            android:textSize="@dimen/text_size_32" />

        <com.xll.mvplib.view.SwitchView
            android:id="@+id/sv_default_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding_left_right"
            app:isOpened="false"
            app:primaryColor="@color/green"
            app:primaryColorDark="@color/green" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_commit"
        style="@style/button"
        android:layout_marginEnd="@dimen/padding_left_right"
        android:layout_marginStart="@dimen/padding_left_right"
        android:background="@color/btn_un_click"
        android:text="@string/sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_default_address" />
</android.support.constraint.ConstraintLayout>